--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <meta property="og:title" content="震驚！他竟然這樣說...">
-  <meta property="og:description" content="你一定要點開來看！">
+  <meta property="og:title" content="震驚！他居然說出這句話...">
+  <meta property="og:description" content="快點開看看發生什麼事！">
   <meta property="og:image" content="https://i.imgur.com/3pEkBPK.jpeg">
-  <meta property="og:url" content="https://fanyu.github.io/line-prank">
+  <meta property="og:url" content="https://fanyu0504.github.io/line-prank/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>整活機器人</title>
+  <title>LINE 整人縮圖連結</title>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
+  <h1>請稍候，正在執行整活...</h1>
   <script>
+    const msg = '我的屁眼很癢';
     liff.init({ liffId: "1657022499-njBkN1k3" }).then(() => {
       if (liff.isInClient()) {
         liff.sendMessages([
-          {
+          {{
             type: 'text',
-            text: '我的屁眼很癢'
-          }
+            text: msg
+          }}
         ]).then(() => {
           liff.closeWindow();
         });
+      } else {
+        document.body.innerHTML = '<h2>請在 LINE App 中開啟本連結</h2>';
       }
     });
   </script>
